# simple_level_editor

./: CMakeLists.txt  main.cpp  main.h  onScreenObjects.h
platform/: glfw.cpp  glfw.h
shaders/: grid.frag  grid.vert
utils/: maths_funcs.h
utils/log_utils/: log.cpp  log.h
